@@ -5,6 +5,7 @@ ncmpc 0.16 - not yet released
 * reactivate incremental playlist changes
 * optimize "add+play song" with addid/playid
 * handle stderr messages from lyrics plugins
+* search: eliminate duplicate results
 
 
 ncmpc 0.15 - 2009-09-24
